# build-msi-wine

./: build-libhelper.sh  build-msi-wine.sh
build-msi/: ActionTe.idt  AdminExe.idt  AdminUIS.idt  AdvtExec.idt  Control.idt  ControlC.idt  ControlE.idt  Dialog.idt  Error.idt  EventMap.idt  InstallE.idt  _Validat.idt
libhelper/: Makefile.am  configure.ac  helper.c
